update text color correction on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -797,7 +797,7 @@ p {
 
 
   .floatbox {
-    color: rgb(51, 39, 227);
+    
     width: fit-content;
     position: absolute;
     padding: 5px;
@@ -815,7 +815,7 @@ p {
     margin-top: -90px;
     background-color: rgba(255, 255, 255, 0.45);  
     backdrop-filter: blur(5px);
-    color: blue;
+    
   }
 
   .float {
